# Game-Engine

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp  scene1.cpp  scene2.cpp
demo/src/scenes/: scene1.cpp  scene2.cpp
include/: animationSystem.hpp  components.hpp  engine.hpp  entityManager.hpp  log.hpp  renderSystem.hpp  resourceManager.hpp  scene.hpp  sceneManager.hpp  system.hpp  utils.hpp
src/: components.cpp  engine.cpp  entityManager.cpp  log.cpp  renderSystem.cpp  resourceManager.cpp  scene.cpp  sceneManager.cpp  system.cpp  utils.cpp
